Fix scrolling on mobile - second try

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ html {
   width: 100%;
   font-size: 16px;
   scroll-behavior: initial;
-  -webkit-overflow-scrolling: touch;
+  // -webkit-overflow-scrolling: touch;
 }
 
 body {
